--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head id="app-header"></head>
+  <head id="app-header">
+  	<meta charset="unicode">
+  </head>
   <script async src="header.js"></script>
   <body>
   	<canvas id="galaxy-background"></canvas>
