--- a/about.html
+++ b/about.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head id="app-header"></head>
-  <script async src="header.js"></script>
-  <body>
+  <head id="app-header">
+  	<meta charset="unicode">
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
+    <title>starmode recruitng</title>
+    <script async src="header.js"></script>
+  </head>
+  <body class="global-fadein">
   	<header id="app-navbar"></header>
   	<script async src="navbar.js"></script>
 
