--- a/index.html
+++ b/index.html
@@ -2,20 +2,48 @@
 <html lang="en">
   <head id="app-header">
   	<meta charset="unicode">
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
+    <title>starmode recruitng</title>
   </head>
-  <script async src="header.js"></script>
+  <script async src="./header.js"></script>
   <body>
   	<canvas id="galaxy-background"></canvas>
   	<script src="galaxy.js"></script>
   	<header id="app-navbar"></header>
-  	<script async src="navbar.js"></script>
-  	<div id="hero-div">
-	  	<h1>Hey there! This is George.</h1>
+  	<script async src="./navbar.js"></script>
+  	<div id="hero-div">  			<h1>Hey there! This is George.</h1>
 	    <p>I'm looking for very niche tech talent in the German market.</p>
 	    <br />
-		<p>If you're a company looking for a very tough role to fill or if you're a candidate with a very rare skillset, you came to the right place.</p>
-		<br />
-		<p>Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a>
+			<p>If you're a company looking for a very tough role to fill or if you're a candidate with a very rare skillset, you came to the right place.</p>
+			<br />
+			<p>Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a>
 	</div>
+
+	<script>
+    let indexNavbar = document.getElementById("app-navbar"); //app-navbar on index page has a different animation than usual navbars across the website
+    let heroDiv = document.getElementById("hero-div"); //same thing here
+    let galaxyBackground = document.getElementById("galaxy-background"); //same thing here
+
+		// Check if the user is visiting the index for the first time. Set 'first-visit-animation' css class if yes, 'not-first-visit-animation' if no.
+		// session Storage only accepts strings
+    if (sessionStorage.getItem("starmode-first-visit") !== "not-first-visit") //Which basically checks if it's a first visit
+    {
+      indexNavbar.classList.add("first-visit-animation");
+      heroDiv.classList.add("first-visit-animation");
+      galaxyBackground.classList.add("first-visit-animation");
+
+      sessionStorage.setItem("starmode-first-visit", "not-first-visit");
+    } else {
+      indexNavbar.classList.add("not-first-visit-animation");
+      heroDiv.classList.add("not-first-visit-animation");
+      galaxyBackground.classList.add("not-first-visit-animation");
+    }
+
+	</script>
   </body>
 </html>
