Added a lot of things

--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
   <head id="app-header">
     <meta charset="unicode">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./main.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -10,16 +11,61 @@
     <title>starmode recruitng</title>
     <script async src="header.js"></script>
   </head>
-  <body>
-  	<header id="app-navbar"></header>
-  	<script async src="navbar.js"></script>
+  <body class="global-fadein">
+    <header id="app-navbar"></header>
+    <script async src="navbar.js"></script>
 
 	  <h1>Blog</h1>
 
-	  <p>This page is not yet ready!</p>
+		<h3 class="blog-title">
+      <a
+          title="The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany"
+          href="./posts/obvious-things-candidates-overlook.html"
+          onclick="javascript:delay('./posts/obvious-things-candidates-overlook.html');return false;">
+        The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany
+      </a>
+    </h3>
+		<p class="blog-date">23rd of August, 2023</p>
 
-		<h3><a href="./hello-world.html">Hello World!</a></h3>
-		<p>21st of August, 2023</p>
+    <h3 class="blog-title">
+      <a
+          title="Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist" 
+          href="./posts/georges-quick-checklist.html"
+          onclick="javascript:delay('./posts/georges-quick-checklist.html');return false;">
+        Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist
+      </a>
+    </h3>
+    <p class="blog-date">15th of April, 2023</p>
+
+    <h3 class="blog-title">
+      <a
+          title="4 Misconceptions About Recruiters From a Candidate’s Perspective"
+          href="./posts/misconceptions-about-recruiters.html"
+          onclick="javascript:delay('./posts/misconceptions-about-recruiters.html');return false;">
+        4 Misconceptions About Recruiters From a Candidate’s Perspective
+      </a>
+    </h3>
+    <p class="blog-date">31st of January, 2023</p>
+
+    <h3 class="blog-title">
+      <a
+          title="Communication skills != Ease of communication"
+          href="./posts/communication-skills-and-ease-of-communication.html"
+          onclick="javascript:delay('./posts/communication-skills-and-ease-of-communication.html');return false;">
+        Communication skills != Ease of communication
+      </a>
+    </h3>
+    <p class="blog-date">17th of January, 2023</p>
+
+    <h3 class="blog-title">
+      <a
+          title="Hello World!"
+          href="./posts/hello-world.html"
+          onclick="javascript:delay('./posts/hello-world.html');return false;">
+        Hello World!
+      </a>
+    </h3>
+    <p class="blog-date">4th of January, 2023</p>
 
     <footer id="app-footer"></footer>
     <script async src="footer.js"></script>
