--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head id="app-header">
   	<meta charset="unicode">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./main.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
+    <meta name="description" content="Looking for a very niche role in Germany or looking for very niche tech candidates? This is George Gluvajic, a tech recruiter in starmode">
+    <meta name="keywords" content="tech recruiting jobs Germany niche IT agency">
+    <meta name="author" content="George Gluvajic">
 
     <title>starmode recruitng</title>
   </head>
