--- a/candidates.html
+++ b/candidates.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head id="app-header">
+  	<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RD5JJG2D79"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-RD5JJG2D79');
+		</script>
+		
   	<meta charset="unicode">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
