Hopefully solved the issue with delay() function in blog.html

--- a/blog.html
+++ b/blog.html
@@ -27,52 +27,27 @@
 	  <h1>Blog</h1>
 
 		<h3 class="blog-title">
-      <a
-          title="The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany"
-          href="./posts/obvious-things-candidates-overlook.html"
-          onclick="javascript:delay('./posts/obvious-things-candidates-overlook.html');return false;">
-        The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany
-      </a>
+      <a title="The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany" href="./posts/obvious-things-candidates-overlook.html" onclick="javascript:delay('./posts/obvious-things-candidates-overlook.html');return false;">The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany</a>
     </h3>
 		<p class="blog-date">23rd of August, 2023</p>
 
     <h3 class="blog-title">
-      <a
-          title="Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist" 
-          href="./posts/georges-quick-checklist.html"
-          onclick="javascript:delay('./posts/georges-quick-checklist.html');return false;">
-        Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist
-      </a>
+      <a title="Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist" href="./posts/georges-quick-checklist.html" onclick="javascript:delay('./posts/georges-quick-checklist.html');return false;">Make Your Profile Attractive to Recruiters and HR Managers - George’s Quick Checklist</a>
     </h3>
     <p class="blog-date">15th of April, 2023</p>
 
     <h3 class="blog-title">
-      <a
-          title="4 Misconceptions About Recruiters From a Candidate’s Perspective"
-          href="./posts/misconceptions-about-recruiters.html"
-          onclick="javascript:delay('./posts/misconceptions-about-recruiters.html');return false;">
-        4 Misconceptions About Recruiters From a Candidate’s Perspective
-      </a>
+      <a title="4 Misconceptions About Recruiters From a Candidate’s Perspective" href="./posts/misconceptions-about-recruiters.html" onclick="javascript:delay('./posts/misconceptions-about-recruiters.html');return false;">4 Misconceptions About Recruiters From a Candidate’s Perspective</a>
     </h3>
     <p class="blog-date">31st of January, 2023</p>
 
     <h3 class="blog-title">
-      <a
-          title="Communication skills != Ease of communication"
-          href="./posts/communication-skills-and-ease-of-communication.html"
-          onclick="javascript:delay('./posts/communication-skills-and-ease-of-communication.html');return false;">
-        Communication skills != Ease of communication
-      </a>
+      <a title="Communication skills != Ease of communication" href="./posts/communication-skills-and-ease-of-communication.html" onclick="javascript:delay('./posts/communication-skills-and-ease-of-communication.html');return false;">Communication skills != Ease of communication</a>
     </h3>
     <p class="blog-date">17th of January, 2023</p>
 
     <h3 class="blog-title">
-      <a
-          title="Hello World!"
-          href="./posts/hello-world.html"
-          onclick="javascript:delay('./posts/hello-world.html');return false;">
-        Hello World!
-      </a>
+      <a title="Hello World!" href="./posts/hello-world.html" onclick="javascript:delay('./posts/hello-world.html');return false;">Hello World!</a>
     </h3>
     <p class="blog-date">4th of January, 2023</p>
 
