--- a/jobs.html
+++ b/jobs.html
@@ -29,7 +29,33 @@
 	  <p>Here are all the roles I currently recruit for. Please note that sometimes when the role is urgent I don't get the time to update this list so please contact me for the most up to date list!</p>
 	  <p>Interested in any of these? Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a>
 
-		<h3>...</h3>
+		<h3>Linux Kernel Developer - Munich - 60k-90k, up to 115k EUR for principal devs</h3>
+		<p>~29 people company, robotics space, German C1 required, at least 5 years of experience in C/C++ Linux Kernel development, embedded software development experience is nice to have</p>
+
+		<h3>Full-stack Golang/React Developer - remote Germany - 60k-80k EUR</h3>
+		<p>A SaaS solution for small business owners, fintech space, remote anywhere in Germany, visa support possible for very talented individuals, German at least B2 level, Golang backend experience minimum 3 years</p>
+
+		<h3>Embedded C/C++ Developer - Munich - 60k-90k EUR</h3>
+		<p>Automobile industry, company north of Munich, reporting directly to the CTO, very fast interview process (2 rounds 60+90mins, ~10 days to get an offer)</p>
+
+		<h3>Security Consultant - Berlin - 60k-75k EUR</h3>
+		<p>The candidate must be CCSP, CISSP, CEH certified and experienced in BSI basic protection, ISO 27001. Very customer facing role, German C1-C2 + English required, hybrid remote 3 days office + 2 days remote</p>
+
+		<h3>2 x iOS Developer - remote in Germany - 60k-100k EUR</h3>
+		<p>German B2 required, customer-facing role, 2 people already in the mobile dev team, CTO wants to expand, business e-commerce platform product with 20k global customers already. Series B startup</p>
+
+		<h3>Other</h3>
+		<p>I'm constantly doing business development and I often get roles that are very hard to fill. The following is a list of roles that I usually recruit for, so even if you don't see anything interesting in the list above, please don't hesitate to reach out. If you're a:</p>
+		<ul>
+			<li>Golang / Ruby / Rust Developer (any niche backend dev stack)</li>
+			<li>Anything C/C++, especially an embedded dev</li>
+			<li>Kernel Developer</li>
+			<li>Mobile Developer (iOS or Android)</li>
+			<li>Cybersecurity consultant or engineer (anything in the field)</li>
+			<li>Reverse Engineer (anything in the field)</li>
+
+		</ul>
+		<p>...I always have something for you. Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a> and find out!</p>
 
     <footer id="app-footer"></footer>
     <script async src="footer.js"></script>
