--- a/jobs.html
+++ b/jobs.html
@@ -27,7 +27,7 @@
 
 	  <h1>Jobs</h1>
 	  <p>Here are all the roles I currently recruit for. Please note that sometimes when the role is urgent I don't get the time to update this list so please contact me for the most up to date list!</p>
-	  <p>Interested in any of these? Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a>
+	  <p>Interested in any of these? Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me an <a id="email" href="#">email</a>
 
 		<h3>Linux Kernel Developer - Munich - 60k-90k, up to 115k EUR for principal devs</h3>
 		<p>~29 people company, robotics space, German C1 required, at least 5 years of experience in C/C++ Linux Kernel development, embedded software development experience is nice to have</p>
@@ -55,7 +55,7 @@
 			<li>Reverse Engineer (anything in the field)</li>
 
 		</ul>
-		<p>...I always have something for you. Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a> and find out!</p>
+		<p>...I always have something for you. Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me an email to find out!</p>
 
     <footer id="app-footer"></footer>
     <script async src="footer.js"></script>
