--- a/candidates.html
+++ b/candidates.html
@@ -27,7 +27,7 @@
 
 	  <h1>Candidates</h1>
 	  <p>Here are all the candidates I interviewed recently that are open to new opportunities. Please note that sometimes when the role is urgent I don't get the time to update this list so please contact me for the most up to date list!
-	  <p>Interested in any of these? Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me a message on <a href="mailto:george@starmode.io">george@starmode.io</a>
+	  <p>Interested in any of these? Connect with me on <a href="https://www.linkedin.com/in/george-gluvajic/">LinkedIn</a> or drop me an<a id="email" href="#">email</a>.
 
 		<h3>...</h3>
 
