--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 	  <h1>Blog</h1>
 
 		<h3 class="blog-title">
-      <a title="The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany" href="./obvious-things-candidates-overlook.html" onclick="javascript:delay('./posts/obvious-things-candidates-overlook.html');return false;">The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany</a>
+      <a title="The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany" href="posts/obvious-things-candidates-overlook.html" onclick="javascript:delay('./posts/obvious-things-candidates-overlook.html');return false;">The Obvious Things Tech Candidates Overlook When Interviewing for a Job in Germany</a>
     </h3>
 		<p class="blog-date">23rd of August, 2023</p>
 
